Fix spacing around input fields and hover/transition animations

--- a/src/style.css
+++ b/src/style.css
@@ -12,7 +12,7 @@ form {
   background-color: white;
   font-family: 'DINProRegular';
   width: 275px;
-  box-shadow: 0px 0px 4px 1px rgba(0,0,0,0.01), 0px 3px 24px 0px rgba(0,0,0,0.1);
+  box-shadow: 0 0 4px 1px rgba(0, 0, 0, 0.01), 0 3px 24px rgba(48, 51, 51, 0.09);
   border-radius: 2px;
 }
 
@@ -32,7 +32,7 @@ header div button {
   font-size: 16px;
   font-weight: 800;
   border: none;
-  height: 55px;
+  height: 51px;
   padding-top: 12px;
   text-align: left;
   outline: none;
@@ -69,6 +69,10 @@ main {
   padding-right: 24px;
   padding-left: 24px;
   border-bottom: 1px solid #f5f5f6;
+}
+
+.fields {
+  padding: 12px 0px;
 }
 
 input {
@@ -180,6 +184,10 @@ input:focus {
   margin: 12px 0px 24px 0px;
   white-space: nowrap;
   text-align: center;
+}
+
+.reviewBtn:hover {
+  background-color: #13eaa9;
 }
 
 footer {
